metadata/unpackaged/objects/IO_Notes__c.object
<CustomObject>
    <description>Custom object with text field for entering notes to accounts, contacts and opportunities. I/O uses this object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for linking the I/O Notes custom object as a related list for accounts.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>I/O Notes</relationshipLabel>
        <relationshipName>R00N300000011ZSuEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for linking the I/O Notes custom object as a related list for contacts.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>I/O Notes</relationshipLabel>
        <relationshipName>R00N300000011ZSzEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_Text__c</fullName>
        <description>Long text area field (32,000 characters) for entering notes related to an account, contact or opportunity. I/O uses this field.</description>
        <label>Notes Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for linking the I/O Notes custom object as a related list for opportunities.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>I/O Notes</relationshipLabel>
        <relationshipName>R00N300000011ZT4EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>I/O Notes</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>I/O Notes ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>I/O Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>